--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,6 +16,8 @@ target 'MinskSpeed' do
 
   pod 'react-native-maps', :path => '../node_modules/react-native-maps'
 
+  pod 'react-native-notification-sounds', :path => '../node_modules/react-native-notification-sounds'
+
   target 'MinskSpeedTests' do
     inherit! :complete
     # Pods for testing
