--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-location": "^2.5.0",
     "react-native-maps": "^0.28.0",
+    "react-native-notification-sounds": "^0.5.3",
+    "react-native-push-notification": "^7.0.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0"
